--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header id="home">
         <!-- Nav Bar-->
         <div id="nav">
             <!-- Logo-->
@@ -23,11 +23,11 @@
             <!-- Nav menu -->
             <div class="nav-menu">
                 <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Skills</a></li>
-                    <li><a href="">Projects</a></li>
-                    <li><a href="">Certificates</a></li>
-                    <li><a href="">Contact Me</a></li>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#skill">Skills</a></li>
+                    <li><a href="#project">Projects</a></li>
+                    <li><a href="#certificates">Certificates</a></li>
+                    <li><a href="#contact">Contact Me</a></li>
                 </ul>
             </div>
         </div>
