--- a/index.html
+++ b/index.html
@@ -176,7 +176,16 @@
                 </div>
             </div>
         </section>
-
+        <footer>
+            <div class="footer">
+            <p>&#169; 2024 &nbsp; | MD ALKAMA</p>
+            <div class="top">
+                <a href="#home"><i class="ri-arrow-up-circle-fill"></i></a>
+                <p>Back&nbsp;to&nbsp;top</p>
+            </div>
+            
+            </div>
+        </footer>
     </main>
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/2836be23db.js" crossorigin="anonymous">
